front/src/ManageExps/ManageExps.css
.sidenav{
    height: 100%;
    width: 250px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #111;
    overflow-x: hidden;
    padding-top: 80px;
}

.sidenav a {
    padding: 6px 8px 6px 16px;
    text-decoration: none;
    font-size: 16px;
    color: #818181;
    display: block;
}

.sidenav a:hover {
    color: #f1f1f1;
}

.ManageApp-Main {
    width: 100%;
    padding-left: 200px;
    display: flex;
    padding-top: 80px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    
}

.ManageApp-each-row{
    font-size: 14px;
    width: 50%;
    padding: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: left;
}

.ManageApp-exptype-row{
    padding: 10px;
    width: 50%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: left;
}

.Exp-table{
    border: 1px solid #ddd;
    text-align: center;
    border-collapse: collapse;
    width: 100%;
}

.Exp-th{
    
    border: 1px solid #ddd;
    max-width: 600px; 
    text-align: center;
    padding: 15px;
}

